# Face_Recognition_HAAR_vs_NeuralNet

./: CMakeLists.txt  Pipfile  README.md  facerec.cpp  facerec.h
config/: config.cfg
src/: GlobalConfig.cpp  dataset.cpp  facerec.cpp  main.cpp  neural_network.py  recognizer.cpp  utils.cpp
src/includes/: GlobalConfig.h  commons.h  dataset.h  facerec.h  main.h  recognizer.h  utils.h
